# openrouter-inspector

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO_CLI_REFACTORING.md  bandit-report.json  models.json  pyproject.toml  pytest.xml  safety-report.json  setup_dev.py  test_cli.py
.crush/: crush.db-shm  crush.db-wal
.dev/: push-release.bat
.github/workflows/: ci.yml  publish.yml  release.yml  tests.yml
config/prompts/: ping.md  throughput.md
openrouter_inspector/: __init__.py  __main__.py  _version.py  cache.py  cli.py  client.py  config.py  exceptions.py  models.py  services.py  utils.py  web_parser.py  web_scraper.py
openrouter_inspector/commands/: __init__.py  base_command.py  endpoints_command.py  list_command.py  ping_command.py
openrouter_inspector/formatters/: base.py  json_formatter.py  table_formatter.py
openrouter_inspector/handlers/: endpoint_handler.py  model_handler.py
openrouter_inspector/interfaces/: client.py
src/: __init__.py
src/common/: README.md  __init__.py  formatting.py
tests/: test_offers_endpoint.py
tests/integration/: test_cli.py  test_cli_check.py  test_error_handling.py  test_list_command.py
tests/unit/: test_cli_lightweight.py  test_cli_ping.py  test_client.py  test_client_fixed.py  test_commands.py  test_config.py  test_enhanced_services.py  test_exceptions.py  test_handlers.py  test_models.py  test_output_formatting.py  test_utils.py  test_web_parser.py  test_web_scraper.py
